export distinct documents only to reduce size

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "type": "node",
             "request": "launch",
             "name": "Export",
-            "program": "${workspaceFolder}/Export.js",
+            "program": "${workspaceFolder}/export.js",
             "envFile": "${workspaceRoot}/.env",
         }
     ]
